<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.urooj.carpoolingapp.driverui.fragment.dashboard.DriverShareRoute"
        android:label="@string/title_ShareRoute"
        tools:layout="@layout/fragment_driver_share_route" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.urooj.carpoolingapp.driverui.fragment.RequestReceive.RequestNotificationsFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification"/>

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.urooj.carpoolingapp.driverui.fragment.Location.DriverLocationMapsFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_driver_location_maps"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.urooj.carpoolingapp.driverui.fragment.Profile.EditProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_driver_profile" />
</navigation>